syntax = "proto2";

message PostProcess {
  // Score threshhold for NMS.
  optional float score_threshold = 1 [default = 1e-6];

  // IoU threshold to check the overlap.
  optional float iou_threshold = 2 [default = 0.5];

  // Maximum detections per class.
  optional int32 max_output_size_per_class = 3 [default = 100];

  // Maximum total detections.
  optional int32 max_total_size = 4 [default = 300];
}


